solution/ext-service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: challenge-service
  labels:
    app: challenge
spec:
  type: ClusterIP
  ports:
  - port: 4000
  selector:
    app: challenge
